--- a/recipes/christmas-dinner.html
+++ b/recipes/christmas-dinner.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Dinner</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Christmas Dinner</h1>
-    <img src="../images/christmas-dinner.JPG" width="500">
+    <div class="mainimg"><img src="../images/christmas-dinner.JPG" width="500"></div>
     <h2>The perfect meal for Christmas Day</h2>
     <p>This traditional festive roast will please all your guests, and includes enough trimmings to feed a hungry crowd!</p>
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>1 turkey</li>
         <li>1 gammon</li>
@@ -22,7 +23,7 @@
 
     </ul>
 
-    <h2>Steps</h2>
+    <h3>Steps</h3>
 
     <ol>
         <li>Cook the meal in the oven</li>
