--- a/recipes/cottage-pie.html
+++ b/recipes/cottage-pie.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cottage Pie</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Cottage Pie</h1>
-    <img src="../images/cottage-pie.JPG" width="500">
+    <div class="mainimg"><img src="../images/cottage-pie.JPG" width="500"></div>
     <h2>A hearty, meaty potato pie</h2>
     <p>When the winter months roll around, there's nothing better than a cottage pie. A rich beef filling topped with cheesy mash, this simple dish can be brought together in an hour, including cooking time.</p>
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>500g beef mince (15% fat)</li>
         <li>1 large onion</li>
@@ -24,7 +25,7 @@
         <li>150g grated cheddar cheese</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h3>Steps</h3>
 
     <ol>
         <li>Fry the beef, carrot and onion together until mince is browned</li>
