--- a/recipes/halloumi-fries.html
+++ b/recipes/halloumi-fries.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halloumi Fries</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Halloumi Fries</h1>
-    <img src="../images/halloumi-fries.JPG" width="500">
+    <div class="mainimg"><img src="../images/halloumi-fries.JPG" width="500"></div>
     <h2>A cheesy alternative to chips, perfect for dipping</h2>
     <p>This versatile Cypriot hard cheese is perfect for coating in batter and frying and goes great with a variety of sources, including tzatziki!</p>
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>250g block of halloumi</li>
         <li>Flour</li>
@@ -20,7 +21,7 @@
 
     </ul>
 
-    <h2>Steps</h2>
+    <h3>Steps</h3>
 
     <ol>
         <li>Slice the halloumi into thumb-sized fries and set aside on kitchen paper to dry</li>
