--- a/recipes/christmas-dinner.html
+++ b/recipes/christmas-dinner.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Christmas Dinner</h1>
-    <div class="mainimg"><img src="../images/christmas-dinner.JPG" width="500"></div>
+    <div class="mainimg"><img src="../images/christmas-dinner.jpg" width="500"></div>
     <h2>The perfect meal for Christmas Day</h2>
     <p>This traditional festive roast will please all your guests, and includes enough trimmings to feed a hungry crowd!</p>
     <h3>Ingredients</h3>
