--- a/recipes/cottage-pie.html
+++ b/recipes/cottage-pie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cottage Pie</h1>
-    <div class="mainimg"><img src="../images/cottage-pie.JPG" width="500"></div>
+    <div class="mainimg"><img src="../images/cottage-pie.jpg" width="500"></div>
     <h2>A hearty, meaty potato pie</h2>
     <p>When the winter months roll around, there's nothing better than a cottage pie. A rich beef filling topped with cheesy mash, this simple dish can be brought together in an hour, including cooking time.</p>
     <h3>Ingredients</h3>
