--- a/recipes/halloumi-fries.html
+++ b/recipes/halloumi-fries.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Halloumi Fries</h1>
-    <div class="mainimg"><img src="../images/halloumi-fries.JPG" width="500"></div>
+    <div class="mainimg"><img src="../images/halloumi-fries.jpg" width="500"></div>
     <h2>A cheesy alternative to chips, perfect for dipping</h2>
     <p>This versatile Cypriot hard cheese is perfect for coating in batter and frying and goes great with a variety of sources, including tzatziki!</p>
     <h3>Ingredients</h3>
